--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     ...
 ]
 </pre>
-                                                                                <span>说明：每首歌的详细数据，包括定数、等级、谱师、note数等。</span>
+                                                                                <span>说明：每首歌的详细数据，包括定数、等级、谱师、note数等。原别名来源：https://www.yuzuchan.moe/api/maimaidx/maimaidxalias，其余基于宇航员猫娘群群友投稿。</span>
                                                                         </li>
                                                                         <li>
                                                                                 <b>曲目别名表</b>：<a href="assets/json/music_alias.json" download>点击下载 music_alias.json</a><br>
